assets/css/webcodr.css
/* ... */
.pagination {
	display: flex;
	margin: 0 10px;
}

.pagination__item {
	width: 50%;
}

.pagination__item-position-prev {
	text-align: left;
}

.pagination__item-position-next {
	text-align: right;
}

.pagination__link {
	color: var(--post-text-color);
	text-decoration: none;
}

.pagination__link:hover {
	color: var(--headline-secondary-color);
}

@media screen and (min-width: 840px) {
	.pagination {
		margin: 0;
	}
}
/* Generated using: hugo gen chromastyles --style=tokyonight-storm */
/* Background */
.bg {
	color: #c0caf5;
	background-color: #1a1b26;
}

/* PreWrapper */
.chroma {
	color: #c0caf5;
}

/* Other */
/* Error */
.chroma .err {
	color: #db4b4b;
}

/* CodeLine */
/* LineLink */
.chroma .lnlinks {
	outline: none;
	text-decoration: none;
	color: inherit;
}

/* LineTableTD */
.chroma .lntd {
	vertical-align: top;
	padding: 0;
	margin: 0;
	border: 0;
}

/* LineTable */
.chroma .lntable {
	border-spacing: 0;
	padding: 0;
	margin: 0;
	border: 0;
}

/* LineHighlight */
.chroma .hl {
	background-color: #414868;
}

/* LineNumbersTable */
.chroma .lnt {
	white-space: pre;
	-webkit-user-select: none;
	user-select: none;
	margin-right: 0.4em;
	padding: 0 0.4em 0 0.4em;
	color: #a9b1d6;
}

/* LineNumbers */
.chroma .ln {
	white-space: pre;
	-webkit-user-select: none;
	user-select: none;
	margin-right: 0.4em;
	padding: 0 0.4em 0 0.4em;
	color: #a9b1d6;
}

/* Line */
.chroma .line {
	display: flex;
}

/* Keyword */
.chroma .k {
	color: #bb9af7;
}

/* KeywordConstant */
.chroma .kc {
	color: #e0af68;
}

/* KeywordDeclaration */
.chroma .kd {
	color: #9d7cd8;
}

/* KeywordNamespace */
.chroma .kn {
	color: #7dcfff;
}

/* KeywordPseudo */
.chroma .kp {
	color: #bb9af7;
}

/* KeywordReserved */
.chroma .kr {
	color: #bb9af7;
}

/* KeywordType */
.chroma .kt {
	color: #41a6b5;
}

/* Name */
/* NameAttribute */
.chroma .na {
	color: #7aa2f7;
}

/* NameClass */
.chroma .nc {
	color: #ff9e64;
}

/* NameConstant */
.chroma .no {
	color: #ff9e64;
}

/* NameDecorator */
.chroma .nd {
	color: #7aa2f7;
	font-weight: bold;
}

/* NameEntity */
.chroma .ni {
	color: #7dcfff;
}

/* NameException */
.chroma .ne {
	color: #e0af68;
}

/* NameLabel */
.chroma .nl {
	color: #9ece6a;
}

/* NameNamespace */
.chroma .nn {
	color: #e0af68;
}

/* NameOther */
/* NameProperty */
.chroma .py {
	color: #e0af68;
}

/* NameTag */
.chroma .nt {
	color: #bb9af7;
}

/* NameBuiltin */
.chroma .nb {
	color: #9ece6a;
}

/* NameBuiltinPseudo */
.chroma .bp {
	color: #9ece6a;
}

/* NameVariable */
/* NameVariableClass */
/* NameVariableGlobal */
/* NameVariableInstance */
/* NameVariableMagic */
/* NameFunction */
.chroma .nf {
	color: #7aa2f7;
}

/* NameFunctionMagic */
.chroma .fm {
	color: #7aa2f7;
}

/* Literal */
/* LiteralDate */
/* LiteralString */
.chroma .s {
	color: #9ece6a;
}

/* LiteralStringAffix */
.chroma .sa {
	color: #9d7cd8;
}

/* LiteralStringBacktick */
.chroma .sb {
	color: #9ece6a;
}

/* LiteralStringChar */
.chroma .sc {
	color: #9ece6a;
}

/* LiteralStringDelimiter */
.chroma .dl {
	color: #7aa2f7;
}

/* LiteralStringDoc */
.chroma .sd {
	color: #737aa2;
}

/* LiteralStringDouble */
.chroma .s2 {
	color: #9ece6a;
}

/* LiteralStringEscape */
.chroma .se {
	color: #7aa2f7;
}

/* LiteralStringHeredoc */
.chroma .sh {
	color: #737aa2;
}

/* LiteralStringInterpol */
.chroma .si {
	color: #9ece6a;
}

/* LiteralStringOther */
.chroma .sx {
	color: #9ece6a;
}

/* LiteralStringRegex */
.chroma .sr {
	color: #7dcfff;
}

/* LiteralStringSingle */
.chroma .s1 {
	color: #9ece6a;
}

/* LiteralStringSymbol */
.chroma .ss {
	color: #9ece6a;
}

/* LiteralNumber */
.chroma .m {
	color: #e0af68;
}

/* LiteralNumberBin */
.chroma .mb {
	color: #e0af68;
}

/* LiteralNumberFloat */
.chroma .mf {
	color: #e0af68;
}

/* LiteralNumberHex */
.chroma .mh {
	color: #e0af68;
}

/* LiteralNumberInteger */
.chroma .mi {
	color: #e0af68;
}

/* LiteralNumberIntegerLong */
.chroma .il {
	color: #e0af68;
}

/* LiteralNumberOct */
.chroma .mo {
	color: #e0af68;
}

/* Operator */
.chroma .o {
	color: #9ece6a;
	font-weight: bold;
}

/* OperatorWord */
.chroma .ow {
	color: #9ece6a;
	font-weight: bold;
}

/* Punctuation */
/* Comment */
.chroma .c {
	color: #737aa2;
	font-style: italic;
}

/* CommentHashbang */
.chroma .ch {
	color: #737aa2;
	font-style: italic;
}

/* CommentMultiline */
.chroma .cm {
	color: #737aa2;
	font-style: italic;
}

/* CommentSingle */
.chroma .c1 {
	color: #737aa2;
	font-style: italic;
}

/* CommentSpecial */
.chroma .cs {
	color: #737aa2;
	font-style: italic;
}

/* CommentPreproc */
.chroma .cp {
	color: #737aa2;
	font-style: italic;
}

/* CommentPreprocFile */
.chroma .cpf {
	color: #737aa2;
	font-weight: bold;
	font-style: italic;
}

/* Generic */
/* GenericDeleted */
.chroma .gd {
	color: #db4b4b;
	background-color: #15161e;
}

/* GenericEmph */
.chroma .ge {
	font-style: italic;
}

/* GenericError */
.chroma .gr {
	color: #db4b4b;
}

/* GenericHeading */
.chroma .gh {
	color: #e0af68;
	font-weight: bold;
}

/* GenericInserted */
.chroma .gi {
	color: #9ece6a;
	background-color: #15161e;
}

/* GenericOutput */
/* GenericPrompt */
/* GenericStrong */
.chroma .gs {
	font-weight: bold;
}

/* GenericSubheading */
.chroma .gu {
	color: #e0af68;
	font-weight: bold;
}

/* GenericTraceback */
.chroma .gt {
	color: #db4b4b;
}

/* GenericUnderline */
.chroma .gl {
	text-decoration: underline;
}

/* TextWhitespace */

